--- a/app/.env.example
+++ b/app/.env.example
@@ -1,16 +1,16 @@
 # Database variables
 
-PATH_TO_DATABASE=
-PATH_TO_SAVES_DIR=
+PATH_TO_DATABASE=  # Choose a path to database. e.g: databases/base.db
+PATH_TO_SAVES_DIR=  # Choose a path to the directory for database saves. WIP
 
 # API related
 
-API_HOST=
-API_PORT=
+API_HOST=  # Select a host for your API. e.g in local: 127.0.0.1
+API_PORT=  # Select a port for yout API. e.g in local: 8000
 
 
 # Authentication related
 
 SECRET_KEY=  # You can use `openssl rand -hex 32` in git bash.
-ALGORITHM= # Algorithm to use for jwt token creation
-ACCESS_TOKEN_EXPIRE_MINUTES=
+ALGORITHM=  # Algorithm to use for jwt token creation
+ACCESS_TOKEN_EXPIRE_MINUTES=  # Number of minutes the token must stay valid. Integer.
