--- a/app/.env.example
+++ b/app/.env.example
@@ -10,7 +10,7 @@ API_PORT=  # Select a port for yout API. e.g in local: 8000
 
 
 # Authentication related
-
+GoogleMapsKey = # Google Maps API key. You can get one here: https://developers.google.com/maps/documentation/javascript/get-api-key
 SECRET_KEY=  # You can use `openssl rand -hex 32` in git bash.
 ALGORITHM=  # Algorithm to use for jwt token creation
 ACCESS_TOKEN_EXPIRE_MINUTES=  # Number of minutes the token must stay valid. Integer.
