working otp by sms

--- a/app/.env.example
+++ b/app/.env.example
@@ -15,3 +15,6 @@ ACCESS_TOKEN_EXPIRE_MINUTES=  # Number of minutes the token must stay valid. Int
 
 # External resources
 GOOGLE_MAPS_KEY= # Google Maps API key. You can get one here: https://developers.google.com/maps/documentation/javascript/get-api-key
+TWILIO_ACCOUNT_SID=  # Twilio account SID. You can get one here: https://www.twilio.com/console
+TWILIO_AUTH_TOKEN=   # Twilio auth token. You can get one here: https://www.twilio.com/console
+TWILIO_SERVICE_SID=  # Twilio service SID. You can get one here: https://www.twilio.com/console
